[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "DRML Node RPC"
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "drml-rpc"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common"
version     = "2.8.16"

[dependencies]
# crates.io
jsonrpc-core   = { version = "18.0" }
jsonrpc-pubsub = { version = "18.0" }
# darwinia-network
darwinia-ethereum = { path = "../../frame/dvm/ethereum" }
drml-primitives   = { path = "../primitives" }
# paritytech
# beefy-gadget                   = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
# beefy-gadget-rpc               = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
pallet-transaction-payment-rpc = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-chain-spec                  = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-client-api                  = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-consensus-babe              = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-consensus-babe-rpc          = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-consensus-epochs            = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-finality-grandpa            = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-finality-grandpa-rpc        = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-network                     = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-rpc                         = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-sync-state-rpc              = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-transaction-pool            = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-transaction-pool-api        = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-api                         = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-block-builder               = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-blockchain                  = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-consensus                   = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-keystore                    = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-runtime                     = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
substrate-frame-rpc-system     = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
# frontier or moonbeam
fc-db                         = { git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.12.3" }
fc-rpc                        = { git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.12.3", features = ["rpc_binary_search_estimate"] }
fc-rpc-core                   = { git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.12.3" }
fp-rpc                        = { git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.12.3" }
fp-storage                    = { git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.12.3" }
moonbeam-rpc-debug            = { git = "https://github.com/darwinia-network/moonbeam", branch = "darwinia-v0.12.3" }
moonbeam-rpc-primitives-debug = { git = "https://github.com/darwinia-network/moonbeam", branch = "darwinia-v0.12.3" }
moonbeam-rpc-trace            = { git = "https://github.com/darwinia-network/moonbeam", branch = "darwinia-v0.12.3" }
# template
futures                  = { version = "0.3", optional = true }
sc-consensus-manual-seal = { optional = true, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
template-runtime         = { optional = true, path = "../runtime/template" }

[features]
template = [
	"futures",
	"sc-consensus-manual-seal",
	"template-runtime",
]
