[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "DRML Node RPC"
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "drml-rpc"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common"
version     = "2.8.19"

[dependencies]
# crates.io
jsonrpc-core   = { version = "18.0" }
jsonrpc-pubsub = { version = "18.0" }
# darwinia-network
darwinia-ethereum = { path = "../../frame/dvm/ethereum" }
drml-primitives   = { path = "../primitives" }
# paritytech
# beefy-gadget                   = { git = "https://github.com/darwinia-network/substrate", branch = "xavier/debug" }
# beefy-gadget-rpc               = { git = "https://github.com/darwinia-network/substrate", branch = "xavier/debug" }
pallet-transaction-payment-rpc = { git = "https://github.com/darwinia-network/substrate", branch = "xavier/debug" }
sc-chain-spec                  = { git = "https://github.com/darwinia-network/substrate", branch = "xavier/debug" }
sc-client-api                  = { git = "https://github.com/darwinia-network/substrate", branch = "xavier/debug" }
sc-consensus-babe              = { git = "https://github.com/darwinia-network/substrate", branch = "xavier/debug" }
sc-consensus-babe-rpc          = { git = "https://github.com/darwinia-network/substrate", branch = "xavier/debug" }
sc-consensus-epochs            = { git = "https://github.com/darwinia-network/substrate", branch = "xavier/debug" }
sc-finality-grandpa            = { git = "https://github.com/darwinia-network/substrate", branch = "xavier/debug" }
sc-finality-grandpa-rpc        = { git = "https://github.com/darwinia-network/substrate", branch = "xavier/debug" }
sc-network                     = { git = "https://github.com/darwinia-network/substrate", branch = "xavier/debug" }
sc-rpc                         = { git = "https://github.com/darwinia-network/substrate", branch = "xavier/debug" }
sc-sync-state-rpc              = { git = "https://github.com/darwinia-network/substrate", branch = "xavier/debug" }
sc-transaction-pool            = { git = "https://github.com/darwinia-network/substrate", branch = "xavier/debug" }
sc-transaction-pool-api        = { git = "https://github.com/darwinia-network/substrate", branch = "xavier/debug" }
sp-api                         = { git = "https://github.com/darwinia-network/substrate", branch = "xavier/debug" }
sp-block-builder               = { git = "https://github.com/darwinia-network/substrate", branch = "xavier/debug" }
sp-blockchain                  = { git = "https://github.com/darwinia-network/substrate", branch = "xavier/debug" }
sp-consensus                   = { git = "https://github.com/darwinia-network/substrate", branch = "xavier/debug" }
sp-keystore                    = { git = "https://github.com/darwinia-network/substrate", branch = "xavier/debug" }
sp-runtime                     = { git = "https://github.com/darwinia-network/substrate", branch = "xavier/debug" }
substrate-frame-rpc-system     = { git = "https://github.com/darwinia-network/substrate", branch = "xavier/debug" }
# frontier or moonbeam
fc-db                         = { git = "https://github.com/darwinia-network/frontier", branch = "xavier/debug" }
fc-rpc                        = { git = "https://github.com/darwinia-network/frontier", branch = "xavier/debug", features = ["rpc_binary_search_estimate"] }
fc-rpc-core                   = { git = "https://github.com/darwinia-network/frontier", branch = "xavier/debug" }
fp-rpc                        = { git = "https://github.com/darwinia-network/frontier", branch = "xavier/debug" }
fp-storage                    = { git = "https://github.com/darwinia-network/frontier", branch = "xavier/debug" }
moonbeam-rpc-debug            = { git = "https://github.com/darwinia-network/moonbeam", branch = "xavier/debug" }
moonbeam-rpc-primitives-debug = { git = "https://github.com/darwinia-network/moonbeam", branch = "xavier/debug" }
moonbeam-rpc-trace            = { git = "https://github.com/darwinia-network/moonbeam", branch = "xavier/debug" }
# template
futures                  = { version = "0.3", optional = true }
sc-consensus-manual-seal = { optional = true, git = "https://github.com/darwinia-network/substrate", branch = "xavier/debug" }
template-runtime         = { optional = true, path = "../runtime/template" }

[features]
template = [
	"futures",
	"sc-consensus-manual-seal",
	"template-runtime",
]
