[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "DRML Node Service"
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "drml-node-service"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common"
version     = "2.8.17"

[dependencies]
# crates.io
array-bytes = { version = "2.0" }
codec       = { package = "parity-scale-codec", version = "2.3" }
futures     = { version = "0.3" }
log         = { version = "0.4" }
rand        = { version = "0.8" }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = { version = "1.0" }
tokio       = { version = "1.19" }
# darwinia-network
darwinia-bridge-ethereum = { path = "../../frame/bridge/ethereum" }
darwinia-ethereum        = { path = "../../frame/dvm/ethereum" }
darwinia-evm             = { path = "../../frame/dvm/evm" }
dp-evm-trace-ext         = { default-features = false, path = "../../primitives/evm-trace/ext" }
drml-primitives          = { path = "../primitives" }
drml-rpc                 = { path = "../rpc" }
pangolin-runtime         = { path = "../runtime/pangolin" }
pangoro-runtime          = { path = "../runtime/pangoro" }
# paritytech
# beefy-gadget                               = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
beefy-primitives                           = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
frame-benchmarking                         = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
frame-system-rpc-runtime-api               = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
pallet-im-online                           = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-authority-discovery                     = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-basic-authorship                        = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-chain-spec                              = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-client-api                              = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-consensus                               = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-consensus-babe                          = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-consensus-slots                         = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-consensus-uncles                        = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-executor                                = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-finality-grandpa                        = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-network                                 = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-service                                 = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-sync-state-rpc                          = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-telemetry                               = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-transaction-pool                        = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-api                                     = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-authority-discovery                     = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-authorship                              = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-block-builder                           = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-blockchain                              = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-consensus                               = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-consensus-babe                          = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-core                                    = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-finality-grandpa                        = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-offchain                                = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-runtime                                 = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-session                                 = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-timestamp                               = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-transaction-pool                        = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-trie                                    = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
substrate-prometheus-endpoint              = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
# frontier or moonbeam
fc-db                         = { git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.12.3" }
fc-mapping-sync               = { git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.12.3" }
fc-rpc                        = { git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.12.3", features = ["rpc_binary_search_estimate"] }
fc-rpc-core                   = { git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.12.3" }
fp-rpc                        = { git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.12.3" }
moonbeam-rpc-debug            = { git = "https://github.com/darwinia-network/moonbeam", branch = "darwinia-v0.12.3" }
moonbeam-rpc-primitives-debug = { git = "https://github.com/darwinia-network/moonbeam", branch = "darwinia-v0.12.3" }
moonbeam-rpc-trace            = { git = "https://github.com/darwinia-network/moonbeam", branch = "darwinia-v0.12.3" }
# template
async-trait              = { version = "0.1", optional = true }
sc-consensus-aura        = { optional = true, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-consensus-manual-seal = { optional = true, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-consensus-aura        = { optional = true, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-inherents             = { optional = true, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
template-runtime         = { optional = true, path = "../runtime/template" }


[features]
default = [
	"db",
	"full-node",
]

db = ["sc-service/db"]

full-node = []

fast-runtime = [
	"pangolin-runtime/fast-runtime",
	"pangoro-runtime/fast-runtime",
]

evm-tracing = [
	"pangolin-runtime/evm-tracing",
	"pangoro-runtime/evm-tracing",
]

template = [
	"drml-rpc/template",
	"async-trait",
	"sc-consensus-aura",
	"sc-consensus-manual-seal",
	"sp-consensus-aura",
	"sp-inherents",
	"template-runtime",
]

runtime-benchmarks = [
	"pangolin-runtime/runtime-benchmarks",
	"pangoro-runtime/runtime-benchmarks",
]

try-runtime = [
	"pangolin-runtime/try-runtime",
	"pangoro-runtime/try-runtime",
]
