[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Minimal array/bytes operation for runtime"
edition     = "2018"
homepage    = "https://darwinia.network/"
license     = "GPL-3.0"
name        = "array-bytes"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common/"
version     = "1.3.0"

[dependencies]
# substrate
sp-std = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", rev = "9e2d7b74742f7b1db7e09a00d423f613787d19a8" }

[features]
default = ["std"]

std = ["substrate-std"]

substrate-std = ["sp-std/std"]
