[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia Asset Primitives"
edition     = "2021"
homepage    = "https://darwinia.network/"
license     = "GPL-3.0"
name        = "dp-asset"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common/"
version     = "2.6.10"

[dependencies]
# crates.io
codec          = { package = "parity-scale-codec", version = "2.1.1", default-features = false, features = ["derive"] }
ethereum-types = { version = "0.11.0", default-features = false }
sha3           = { version = "0.9.1", default-features = false }
# paritytech
sp-std = { default-features = false, git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6-1" }

[features]
default = ["std"]

std = [
	# crates.io
	"codec/std",
	"ethereum-types/std",
	"sha3/std",
	# paritytech
	"sp-std/std",

]
