[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia Asset Primitives"
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "dp-asset"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common"
version     = "2.7.2"

[dependencies]
# crates.io
codec          = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
ethereum-types = { version = "0.12", default-features = false }
sha3           = { version = "0.9", default-features = false }
# paritytech
sp-std = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.8" }

[features]
default = ["std"]

std = [
	# crates.io
	"codec/std",
	"ethereum-types/std",
	"sha3/std",
	# paritytech
	"sp-std/std",

]
