[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia Asset Primitives"
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "dp-asset"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common"
version     = "2.8.12"

[dependencies]
# crates.io
codec          = { package = "parity-scale-codec", version = "2.3", default-features = false, features = ["derive"] }
ethereum-types = { version = "0.12", default-features = false }
scale-info     = { version = "1.0", default-features = false, features = ["derive"] }
sha3           = { version = "0.9", default-features = false }

[features]
default = ["std"]

std = [
	# crates.io
	"codec/std",
	"ethereum-types/std",
	"scale-info/std",
	"sha3/std",

]
